<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context="com.example.android.armed.MedInfoDisplayActivity">

    <ProgressBar
        android:id="@+id/dataFetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/medInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/medNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/medicine_name_label"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/string_medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/adultDosageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/adult_dosage_label"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drugDosage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/childDosageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/child_dosage_label"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drugCommonSymptoms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/contraindicationsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/contraindications_label"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drugContraindications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/drugSideEffects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="2dp"
            android:text="@string/scan_medicine"
            android:textColor="@color/cardview_light_background"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>






